@@ -17,7 +17,7 @@
 
 """Constants."""
 
-# pylint: disable-msg=E1101
+# pylint: disable-msg=E1101,W0201
 
 
 import gaupol
